# runa

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  START_HERE.md  SUPPORT.md  pyproject.toml  runa.yaml.example
.github/workflows/: ci.yml
docs/: README.md  architecture.md  configuration.md  mvp.md  personas.md  principles.md  privacy-modes.md  proposals.md  providers.md  safety-and-privacy.md  terminology.md  threat-model.md  vault-contract.md  vision.md
docs/decisions/: 0001-record-architecture-decisions.md  0002-operator-not-agent.md  0003-python-now-rust-tauri-later.md  README.md
examples/vault-minimal/: README.md  inbox.md  runa.yaml  walkthrough.md
examples/vault-minimal/notes/: ai-engineering.md
examples/vault-minimal/projects/: polaris.md
examples/vault-minimal/proposals/: README.md
scripts/: validate.py
src/runa/: __init__.py  __main__.py  capture.py  cli.py  config.py  proposals.py  safety.py  vault.py
src/runa/personas/: __init__.py  base.py
src/runa/providers/: __init__.py  base.py
src/runa/skills/: __init__.py  base.py
tests/: test_capture.py  test_cli.py  test_config.py  test_dry_run.py  test_no_network.py  test_path_security.py  test_proposals.py  test_safety.py  test_static_no_network.py  test_vault.py
