[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "runa"
version = "0.1.0"
description = "Local-first, Markdown-first operator for knowledge bases and project workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Polaris" }]
keywords = ["markdown", "knowledge-base", "local-first", "git", "obsidian", "cli"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: Markup :: Markdown",
]
# v0.1 intentionally has no runtime dependencies (standard library only).
dependencies = []

[project.urls]
Homepage = "https://github.com/polaris-open/runa"
Repository = "https://github.com/polaris-open/runa"

[project.scripts]
runa = "runa.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
